# mle-challenge-latam

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  trained_model.joblib
.github/: pull_request_template.md
.github/workflows/: cd-cloudrun.yml  cd.yml  ci.yml
challenge/: api.py  constants.py  exploration.ipynb  model.py
docs/: challenge.md
tests/api/: test_api.py
tests/model/: test_model.py
